Add Consent-O-Matic code

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "commander": "^2.19.0",
     "progress": "^2.0.3",
     "puppeteer": "^10.2.0",
+    "sleep-promise": "^9.1.0",
     "tldts": "^4.0.3"
   }
 }
