Add option to collect all links

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "progress": "^2.0.3",
     "puppeteer": "^10.2.0",
     "sleep-promise": "^9.1.0",
+    "tld-extract": "^2.0.1",
     "tldts": "^4.0.3"
   }
 }
